Main page text Still missing styling

--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 ---
 layout: default
-categories: about index
+categories: main index
 ---
 
-<div class="home">
-teste
-  <!--p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p-->
+<header>
+Hello! I'm a full stack developer that believes in the importance of readable code.
+</header>
 
-</div>
+<section>
+I think that code should not only be functional but also free of smells, expansible and changeable.
+</section>
+
+<section>
+For the latter two, it is important that your code is readable, specially by other human beings.
+</section>
+
+<section>
+Writing code that a computer can read is easy. Writing code that others can read is harder.
+</section>
