--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@ categories: main index
 ---
 
 <header>
-Hello! I'm a full stack developer that believes in the importance of readable code.
+Hello! I'm a software craftsman.
 </header>
 
 <section>
-I think that code should not only be functional but also free of smells, expansible and changeable.
+I think that code should not only be functional but also free of smells,
+extensible and maintanable.
 </section>
 
 <section>
-For the latter two, it is important that your code is readable, specially by other human beings.
-</section>
-
-<section>
-Writing code that a computer can read is easy. Writing code that others can read is harder.
+For the latter two, it is important that your code is readable by other human
+beings. And this is much harder than simply writing code that compiles and
+works.
 </section>
