Last commit before change

--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 ---
 layout: default
-categories: main index
+categories: 'main index'
 ---
 
-<header>
-Hello! I'm a software craftsman.
-</header>
-
 <section>
+<header>
+<h1>Hello! I'm a software craftsman.</h1>
+</header>
 I think that code should not only be functional but also free of smells,
 extensible and maintanable.
-</section>
 
-<section>
 For the latter two, it is important that your code is readable by other human
 beings. And this is much harder than simply writing code that compiles and
 works.
+
 </section>
+
+
+</section>
+<section>
