About page A little work on main page. Added indentation when 2 sections are together. Added URL to work places and to general item showing.

--- a/index.html
+++ b/index.html
@@ -3,19 +3,26 @@ layout: default
 category: main
 ---
 
-<section>
 <header>
 <h1>Hello! I'm a software craftsman.</h1>
 </header>
+
+<section>
 I think that code should not only be functional but also free of smells,
 extensible and maintanable.
 
 For the latter two, it is important that your code is readable by other human
 beings. And this is much harder than simply writing code that compiles and
 works.
-
 </section>
 
-
-</section>
 <section>
+  I have worked mostly with Java web development on my professional life. I have
+  also made a few small Rails projects.
+</section>
+
+<section>
+  My main interests are concurrent programming, web development (despite that
+  I am not a designer) and programming challenges (which I mostly use Ruby to
+  solve).
+</section>
