--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ category: main
 ---
 
 <header>
-  <h1>Hello! I'm a software craftsman.</h1>
+  <h1>Hello! I'm a bug designer/Chief Muppet Officer.</h1>
 </header>
 
 <section>
